force-app/main/default/objects/Product_Lab_Order_Configuration__c/Product_Lab_Order_Configuration__c.object-meta.xml
<CustomObject>
    <description>Junction object between Product and Lab Provider to specify product configuration per Lab Provider</description>
    <label>Product Lab Order Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Lab Order Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Lab Order Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>