force-app/main/default/objects/Product_Lab_Order_Configuration__c/fields/Distribution_Center_SKU__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center_SKU__c</fullName>
    <description>The SKU that will be sent to the distribution center(DC) when doing a submit-order API call.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The distribution centers SKU.</inlineHelpText>
    <label>Distribution Center SKU</label>
    <length>40</length>
    <type>Text</type>
</CustomField>