force-app/main/default/objects/Product_Lab_Order_Configuration__c/fields/Lab_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Lab_Product_SKU__c</fullName>
    <description>The SKU to be sent to the lab via the API</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The lab specific SKU. This will be sent when a submit order API call is made.</inlineHelpText>
    <label>Lab Product SKU</label>
    <length>40</length>
    <type>Text</type>
</CustomField>