force-app/main/default/objects/Product_Lab_Order_Configuration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What product this configuration is for</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Lab Order Configurations</relationshipLabel>
    <relationshipName>Product_Lab_Order_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>