force-app/main/default/objects/Product_Lab_Order_Configuration__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>When making the API Call what is the Request Type field set to. This is as of today needed for 3PL integration only.</description>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Order_API_Request_Type</valueSetName>
    </valueSet>
</CustomField>